# internal/controllers/Songs/Create_song.go
@@ -4,25 +4,33 @@ import (
 	"encoding/json"
 	"github.com/sirupsen/logrus"
 	"middleware/example/internal/models"
-	"middleware/example/internal/repositories/Songs"
+	service "middleware/example/internal/services/Songs"
 	"net/http"
 )
 
-// GetSong
-// @Tags         Songs
-// @Summary      Get a collection.
-// @Description  Get a collection.
-// @Param        id           	path      string  true  "Song UUID formatted ID"
-// @Success      200            {object}  models.Song
-// @Failure      422            "Cannot parse id"
-// @Failure      500            "Something went wrong"
-// @Router       /Songs/{id} [get]
+// CreateSong
+// @Tags        songs
+// @Summary     Create a new song
+// @Description Create a new song with the provided parameters.
+// @Param    song      body     models.SongRequest true "Song object to be created"
+// @Success  201       {object} models.Song             "Created"
+// @Failure  400       {object} models.CustomError      "Invalid request"
+// @Failure  500       {object} models.CustomError      "Something went wrong"
+// @Router   /songs/   [post]
 func CreateSong(w http.ResponseWriter, r *http.Request) {
-	var song models.Song
-	var newsong *models.Song
+	var song models.SongRequest
 	err := json.NewDecoder(r.Body).Decode(&song)
+	if err != nil {
+		http.Error(w, "Invalid JSON format", http.StatusBadRequest)
+		return
+	}
+	err = models.ValidateSongRequest(song)
+	if err != nil {
+		http.Error(w, "Invalid request payload", http.StatusBadRequest)
+		return
+	}
 
-	newsong, err = Songs.RequestCreateSong(song)
+	newSong, err := service.CreateSong(song)
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
 		customError, isCustom := err.(*models.CustomError)
@@ -36,8 +44,8 @@ func CreateSong(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.WriteHeader(http.StatusOK)
-	body, _ := json.Marshal(newsong)
+	w.WriteHeader(http.StatusCreated)
+	body, _ := json.Marshal(newSong)
 	_, _ = w.Write(body)
 	return
 }
